force-app/main/default/objects/Ticket__c/Ticket__c.object-meta.xml
<CustomObject>
    <label>Ticket</label>
    <nameField>
        <displayFormat>T-{000}</displayFormat>
        <label>Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>