force-app/main/default/objects/Ticket__c/fields/Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Type__c</fullName>
    <label>Ticket Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Admission</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>Early Bird</fullName>
            </value>
            <value>
                <fullName>Group Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>