force-app/main/default/objects/Ticket__c/fields/Total_Ticket_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Ticket_Price__c</fullName>
    <formula>CASE(
  TEXT(Ticket_Type__c),
&quot;General Admission&quot;, 500,
&quot;VIP&quot;, 1500,
&quot;Early Bird&quot;, 400,
&quot;Group Discount&quot;, 200,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Ticket Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>