force-app/main/default/objects/Ticket__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event__c</columns>
    <columns>Attendee__c</columns>
    <columns>Ticket_Type__c</columns>
    <columns>Payment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>